--- a/src/Infrastructure/CarRental.Persistence/CarRental.Persistence.csproj
+++ b/src/Infrastructure/CarRental.Persistence/CarRental.Persistence.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\CarRental.Application\CarRental.Application.csproj" />
   </ItemGroup>
 
