feat: create initial migration

--- a/src/Presentation/CarRental.WebAPI/appsettings.Production.json
+++ b/src/Presentation/CarRental.WebAPI/appsettings.Production.json
@@ -24,7 +24,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "Adisyon"
+      "Application": "CarRental"
     }
   },
   "ConnectionStrings": {
